# terminition

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
loopAnalysis/: termLoopPass.cpp  termLoopPass.h
searchTree/: Common.cpp  Common.h  Node.cpp  Node.h
test/: aboveIncSingle.c  aboveIncregSingle.ll  generateir.sh  twoPathDec.c  twoPathDecreg.ll  twoPathInc.c  twoPathIncConst.c  twoPathIncreg.ll
test/conAndCon/: ab_ab.c  ab_ab.creg.ll  ab_abreg.ll  ab_be.c  ab_be.creg.ll  ab_bereg.ll  be_ab.c  be_ab.creg.ll  be_abreg.ll  be_be.c  be_be.creg.ll  be_bereg.ll  generateir.sh
test/incAndCons/: ab_ab_dec.c  ab_ab_decreg.ll  ab_ab_inc.c  ab_ab_increg.ll  ab_be_dec.c  ab_be_decreg.ll  ab_be_inc.c  ab_be_increg.ll  be_ab_dec.c  be_ab_decreg.ll  be_ab_inc.c  be_ab_increg.ll  be_be_dec.c  be_be_decreg.ll  be_be_inc.c  be_be_increg.ll
test/incAndDec/: ab_ab.c  ab_abreg.ll  ab_be.c  ab_bereg.ll  be_ab.c  be_abreg.ll  be_be.c  be_bereg.ll  ty.ir
